// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/CustomRule/Form should match snap 1`] = `
<body>
  <div />
  <div>
    <section
      class="css-bspaai"
    >
      <div
        data-testid="base-form"
      >
        <h3
          class="ant-typography css-y0jsrg css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="anticon title-icon"
            role="img"
          >
            <span
              class="custom-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="file-list-2-fill"
                >
                  <path
                    d="M26.6667 29.3332H5.33333C4.97971 29.3332 4.64057 29.1927 4.39052 28.9426C4.14048 28.6926 4 28.3535 4 27.9998V3.99984C4 3.64622 4.14048 3.30708 4.39052 3.05703C4.64057 2.80698 4.97971 2.6665 5.33333 2.6665H26.6667C27.0203 2.6665 27.3594 2.80698 27.6095 3.05703C27.8595 3.30708 28 3.64622 28 3.99984V27.9998C28 28.3535 27.8595 28.6926 27.6095 28.9426C27.3594 29.1927 27.0203 29.3332 26.6667 29.3332ZM10.6667 9.33317V11.9998H21.3333V9.33317H10.6667ZM10.6667 14.6665V17.3332H21.3333V14.6665H10.6667ZM10.6667 19.9998V22.6665H17.3333V19.9998H10.6667Z"
                    fill="#C3C6CD"
                    id="Vector"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span>
            创建
          </span>
        </h3>
        <form
          class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw css-19jfn7e"
        >
          <div
            class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="desc"
                  title=""
                />
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-opeiev"
                      id="desc"
                      placeholder="请输入规则名称"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-no-colon"
                  for="annotation"
                  title="规则说明"
                >
                  规则说明
                </label>
              </div>
              <div
                class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <textarea
                      class="ant-input css-dev-only-do-not-override-txh9fw basic-input-wrapper textarea-no-resize css-1pd1cd5"
                      id="annotation"
                      placeholder="请输入规则说明"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="dbType"
                  title="适用数据源类型"
                >
                  适用数据源类型
                </label>
              </div>
              <div
                class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="dbType_list_0"
                            aria-autocomplete="list"
                            aria-controls="dbType_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="dbType_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="dbType"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          请选择适用数据源类型
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="ruleType"
                  title="规则分类"
                >
                  规则分类
                </label>
              </div>
              <div
                class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-disabled ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="ruleType_list_0"
                            aria-autocomplete="list"
                            aria-controls="ruleType_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="ruleType_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            disabled=""
                            id="ruleType"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          请选择规则分类
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="level"
                  title="默认告警等级"
                >
                  默认告警等级
                </label>
              </div>
              <div
                class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="level_list_0"
                            aria-autocomplete="list"
                            aria-controls="level_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="level_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="level"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="提示"
                        >
                          提示
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
            type="button"
          >
            <span>
              下一步
            </span>
          </button>
        </form>
      </div>
      <div
        data-testid="rule-script"
        hidden=""
      >
        <form
          class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw hasTopGap css-19jfn7e"
        >
          <div
            class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="script"
                  title="规则脚本"
                >
                  规则脚本
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10 css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="custom-monaco-editor css-baixa9"
                      height="500px"
                      id="script"
                      language="regexp"
                      options="{\\"automaticLayout\\":true,\\"minimap\\":{\\"enabled\\":false},\\"fontFamily\\":\\"SF Mono\\",\\"fontSize\\":14,\\"fontWeight\\":\\"400\\",\\"lineNumbersMinChars\\":2,\\"suggestFontSize\\":14}"
                      value=""
                      width="720px"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </section>
  </div>
</body>
`;

exports[`sqle/CustomRule/Form should match snap when provide defaultData 1`] = `
<body>
  <div />
  <div>
    <section
      class="css-bspaai"
    >
      <div
        data-testid="base-form"
      >
        <h3
          class="ant-typography css-y0jsrg css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="anticon title-icon"
            role="img"
          >
            <span
              class="custom-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="file-list-2-fill"
                >
                  <path
                    d="M26.6667 29.3332H5.33333C4.97971 29.3332 4.64057 29.1927 4.39052 28.9426C4.14048 28.6926 4 28.3535 4 27.9998V3.99984C4 3.64622 4.14048 3.30708 4.39052 3.05703C4.64057 2.80698 4.97971 2.6665 5.33333 2.6665H26.6667C27.0203 2.6665 27.3594 2.80698 27.6095 3.05703C27.8595 3.30708 28 3.64622 28 3.99984V27.9998C28 28.3535 27.8595 28.6926 27.6095 28.9426C27.3594 29.1927 27.0203 29.3332 26.6667 29.3332ZM10.6667 9.33317V11.9998H21.3333V9.33317H10.6667ZM10.6667 14.6665V17.3332H21.3333V14.6665H10.6667ZM10.6667 19.9998V22.6665H17.3333V19.9998H10.6667Z"
                    fill="#C3C6CD"
                    id="Vector"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span>
            编辑
          </span>
        </h3>
        <form
          class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw css-19jfn7e"
        >
          <div
            class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="desc"
                  title=""
                />
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input ant-input-disabled ant-input-status-success css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-opeiev"
                      disabled=""
                      id="desc"
                      placeholder="请输入规则名称"
                      type="text"
                      value="test_custom_rule"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-no-colon"
                  for="annotation"
                  title="规则说明"
                >
                  规则说明
                </label>
              </div>
              <div
                class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <textarea
                      class="ant-input css-dev-only-do-not-override-txh9fw basic-input-wrapper textarea-no-resize css-1pd1cd5"
                      id="annotation"
                      placeholder="请输入规则说明"
                    >
                      anno
                    </textarea>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="dbType"
                  title="适用数据源类型"
                >
                  适用数据源类型
                </label>
              </div>
              <div
                class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow ant-select-disabled"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="dbType_list_0"
                            aria-autocomplete="list"
                            aria-controls="dbType_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="dbType_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            disabled=""
                            id="dbType"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                        >
                          <div
                            class="css-1uw16ge"
                          >
                            <img
                              alt=""
                              src=""
                            />
                            <span
                              title="mysql"
                            >
                              mysql
                            </span>
                          </div>
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="ruleType"
                  title="规则分类"
                >
                  规则分类
                </label>
              </div>
              <div
                class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="ruleType_list_0"
                            aria-autocomplete="list"
                            aria-controls="ruleType_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="ruleType_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="ruleType"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="规范1"
                        >
                          规范1
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        aria-hidden="true"
                        class="ant-select-clear"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          class="custom-icon custom-icon-close css-u3jcp4"
                          role="img"
                        >
                          <svg
                            fill="currentColor"
                            height="14"
                            viewBox="0 0 14 14"
                            width="14"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.99993 6.17522L9.88743 3.28772L10.7123 4.11255L7.82476 7.00005L10.7123 9.88755L9.88743 10.7124L6.99993 7.82489L4.11243 10.7124L3.2876 9.88755L6.1751 7.00005L3.2876 4.11255L4.11243 3.28772L6.99993 6.17522Z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="level"
                  title="默认告警等级"
                >
                  默认告警等级
                </label>
              </div>
              <div
                class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="level_list_0"
                            aria-autocomplete="list"
                            aria-controls="level_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="level_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="level"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="错误"
                        >
                          错误
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
            type="button"
          >
            <span>
              下一步
            </span>
          </button>
        </form>
      </div>
      <div
        data-testid="rule-script"
        hidden=""
      >
        <form
          class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw hasTopGap css-19jfn7e"
        >
          <div
            class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="script"
                  title="规则脚本"
                >
                  规则脚本
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10 css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="custom-monaco-editor css-baixa9"
                      height="500px"
                      id="script"
                      language="regexp"
                      options="{\\"automaticLayout\\":true,\\"minimap\\":{\\"enabled\\":false},\\"fontFamily\\":\\"SF Mono\\",\\"fontSize\\":14,\\"fontWeight\\":\\"400\\",\\"lineNumbersMinChars\\":2,\\"suggestFontSize\\":14}"
                      value="SELECT 1;"
                      width="720px"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </section>
  </div>
</body>
`;

exports[`sqle/CustomRule/Form should match snap when provide defaultData 2`] = `
<body>
  <div />
  <div>
    <section
      class="css-bspaai"
    >
      <div
        data-testid="base-form"
      >
        <h3
          class="ant-typography css-y0jsrg css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="anticon title-icon"
            role="img"
          >
            <span
              class="custom-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="file-list-2-fill"
                >
                  <path
                    d="M26.6667 29.3332H5.33333C4.97971 29.3332 4.64057 29.1927 4.39052 28.9426C4.14048 28.6926 4 28.3535 4 27.9998V3.99984C4 3.64622 4.14048 3.30708 4.39052 3.05703C4.64057 2.80698 4.97971 2.6665 5.33333 2.6665H26.6667C27.0203 2.6665 27.3594 2.80698 27.6095 3.05703C27.8595 3.30708 28 3.64622 28 3.99984V27.9998C28 28.3535 27.8595 28.6926 27.6095 28.9426C27.3594 29.1927 27.0203 29.3332 26.6667 29.3332ZM10.6667 9.33317V11.9998H21.3333V9.33317H10.6667ZM10.6667 14.6665V17.3332H21.3333V14.6665H10.6667ZM10.6667 19.9998V22.6665H17.3333V19.9998H10.6667Z"
                    fill="#C3C6CD"
                    id="Vector"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span>
            编辑
          </span>
        </h3>
        <form
          class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw css-19jfn7e"
        >
          <div
            class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="desc"
                  title=""
                />
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input ant-input-disabled ant-input-status-success css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-opeiev"
                      disabled=""
                      id="desc"
                      placeholder="请输入规则名称"
                      type="text"
                      value="test_custom_rule"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-no-colon"
                  for="annotation"
                  title="规则说明"
                >
                  规则说明
                </label>
              </div>
              <div
                class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <textarea
                      class="ant-input css-dev-only-do-not-override-txh9fw basic-input-wrapper textarea-no-resize css-1pd1cd5"
                      id="annotation"
                      placeholder="请输入规则说明"
                    >
                      anno
                    </textarea>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="dbType"
                  title="适用数据源类型"
                >
                  适用数据源类型
                </label>
              </div>
              <div
                class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow ant-select-disabled"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="dbType_list_0"
                            aria-autocomplete="list"
                            aria-controls="dbType_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="dbType_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            disabled=""
                            id="dbType"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                        >
                          <div
                            class="css-1uw16ge"
                          >
                            <img
                              alt=""
                              src=""
                            />
                            <span
                              title="mysql"
                            >
                              mysql
                            </span>
                          </div>
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="ruleType"
                  title="规则分类"
                >
                  规则分类
                </label>
              </div>
              <div
                class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="ruleType_list_0"
                            aria-autocomplete="list"
                            aria-controls="ruleType_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="ruleType_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="ruleType"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="规范1"
                        >
                          规范1
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        aria-hidden="true"
                        class="ant-select-clear"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          class="custom-icon custom-icon-close css-u3jcp4"
                          role="img"
                        >
                          <svg
                            fill="currentColor"
                            height="14"
                            viewBox="0 0 14 14"
                            width="14"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.99993 6.17522L9.88743 3.28772L10.7123 4.11255L7.82476 7.00005L10.7123 9.88755L9.88743 10.7124L6.99993 7.82489L4.11243 10.7124L3.2876 9.88755L6.1751 7.00005L3.2876 4.11255L4.11243 3.28772L6.99993 6.17522Z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="level"
                  title="默认告警等级"
                >
                  默认告警等级
                </label>
              </div>
              <div
                class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="level_list_0"
                            aria-autocomplete="list"
                            aria-controls="level_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="level_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="level"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="错误"
                        >
                          错误
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
            type="button"
          >
            <span>
              下一步
            </span>
          </button>
        </form>
      </div>
      <div
        data-testid="rule-script"
        hidden=""
      >
        <form
          class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw hasTopGap css-19jfn7e"
        >
          <div
            class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="script"
                  title="规则脚本"
                >
                  规则脚本
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10 css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="custom-monaco-editor css-baixa9"
                      height="500px"
                      id="script"
                      language="regexp"
                      options="{\\"automaticLayout\\":true,\\"minimap\\":{\\"enabled\\":false},\\"fontFamily\\":\\"SF Mono\\",\\"fontSize\\":14,\\"fontWeight\\":\\"400\\",\\"lineNumbersMinChars\\":2,\\"suggestFontSize\\":14}"
                      value="SELECT 1;"
                      width="720px"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </section>
  </div>
</body>
`;
